catalog#5369 Clicking on disabled menu item no longer triggers interaction

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -169,7 +169,7 @@
 		&[disabled] {
 			color: var(--theme-text-accent);
 			background: var(--theme-bgd);
-			cursor:default;
+			cursor: not-allowed;
 		}
 		
 		&[active] :not([disabled]),
