Menu: finish implement of `disabled` feature

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -172,7 +172,7 @@
 			cursor: not-allowed;
 		}
 		
-		&[active] :not([disabled]),
+		&[active],
 		&.popover-open {
 			background: var(--hoverBgd);
 			color: var(--hoverTextColor);
