pwa.less: add `font-size-rg` (regular)

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -37,6 +37,7 @@ html {
     /* https://spencermortensen.com/articles/typographic-scale/ */
     --font-size-xs: .65em;
     --font-size-sm: .8409em;
+    --font-size-rg: 1em;
     --font-size-md: 1.1892em;
     --font-size-lg: 1.4142em;
     --font-size-xl: 1.6818em;
