Popover: minor change

--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -48,7 +48,7 @@
 		overflow: auto;
 		border: solid 1px var(--border);
 		box-shadow: var(--b-popover-shadow, var(--theme-shadow-2, rgba(0,0,0,.2) 0 2px 8px));
-		--radius: 5px;
+		--radius: var(--b-popover-radius, 6px);
 		border-radius: var(--radius);
 	}
 
