--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -66,11 +66,14 @@ html, body {
     Only require one side to be large. Android will shrink the viewport
     when the keyboard opens
 */
-@media (min-width:600px) and (min-height:400px),
-(min-width:400px) and (min-height:600px) {
-    html.mobile:not(.chromeos) body {
+@media 
+(min-width:600px) and (min-height:400px) and (max-height: 900px),
+(min-width:400px) and (min-height:600px) and (max-width: 900px)
+{
+    html.touch,
+    html.touch body {
         // little larger on tablets
-        font-size: 18px;
+        font-size: 18px !important;
     }
 }
 
