Style adjustments for other devices

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -109,7 +109,7 @@ b-panel {
 }
 
 :root.installed:not(.ios) b-panel {
-    --b-panel-radius: 1rem;
+    --b-panel-radius: .75rem;
 }
 
 @media (min-width: 600px){
