theme.less: add `--theme-text-dim` styles

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -10,6 +10,7 @@
     --light-bgd-rgb: 255,255,255;
     --light-text: rgba(var(--light-text-rgb), 1);
     --light-text-accent: rgba(var(--light-text-rgb),.4);
+    --light-text-dim: rgba(var(--light-text-rgb),.6);
     --light-text-accent2: rgba(var(--light-text-rgb),.8);
     --light-bgd: white;
     --light-bgd-accent: #ebebeb;
@@ -31,6 +32,7 @@
     --dark-bgd-rgb: 0,0,0;
     --dark-text: rgba(var(--dark-text-rgb), 1);
     --dark-text-accent: rgba(var(--dark-text-rgb),.4);
+    --dark-text-dim: rgba(var(--dark-text-rgb),.6);
     --dark-text-accent2: rgba(var(--dark-text-rgb),.8);
     --dark-bgd: var(--dark);
     --dark-bgd-accent: var(--dark-black);
@@ -57,6 +59,7 @@
     --theme-bgd-rgb: var(--light-bgd-rgb);
     --theme-text: var(--light-text);
     --theme-text-accent: var(--light-text-accent);
+    --theme-text-dim: var(--light-text-dim);
     --theme-text-accent2: var(--light-text-accent2);
     --theme-bgd: var(--light-bgd);
     --theme-bgd-accent: var(--light-bgd-accent);
@@ -72,6 +75,7 @@
     --theme-inverse-bgd-rgb: var(--dark-bgd-rgb);
     --theme-inverse-text: var(--dark-text);
     --theme-inverse-text-accent: var(--dark-text-accent);
+    --theme-inverse-text-dim: var(--dark-text-dim);
     --theme-inverse-text-accent2: var(--dark-text-accent2);
     --theme-inverse-bgd: var(--dark-bgd);
     --theme-inverse-bgd-accent: var(--dark-bgd-accent);
@@ -90,6 +94,7 @@
     --theme-bgd-rgb: var(--dark-bgd-rgb);
     --theme-text: var(--dark-text);
     --theme-text-accent: var(--dark-text-accent);
+    --theme-text-dim: var(--dark-text-dim);
     --theme-text-accent2: var(--dark-text-accent2);
     --theme-bgd: var(--dark-bgd);
     --theme-bgd-accent: var(--dark-bgd-accent);
@@ -105,6 +110,7 @@
     --theme-inverse-bgd-rgb: var(--light-bgd-rgb);
     --theme-inverse-text: var(--light-text);
     --theme-inverse-text-accent: var(--light-text-accent);
+    --theme-inverse-text-dim: var(--light-text-dim);
     --theme-inverse-text-accent2: var(--light-text-accent2);
     --theme-inverse-bgd: var(--light-bgd);
     --theme-inverse-bgd-accent: var(--light-bgd-accent);
