pwa.less: root panel overflow change for shadows

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -121,7 +121,7 @@ b-panel[height="100%"][anchor="left"]::part(main),
     right: var(--inset-margin, .5em);
     top: var(--inset-margin, .5em);
     border-radius: var(--radius);
-    overflow: hidden; /* keep clipped inside radius */
+    overflow: visible; /* keep clipped inside radius; changed for dropshadow..will be problem? */
 }
 }
 
