pwa: adjust panel radius

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -122,6 +122,7 @@ b-panel[height="100%"][anchor="left"]::part(main),
     top: var(--inset-margin, .5em);
     border-radius: var(--radius);
     overflow: visible; /* keep clipped inside radius; changed for dropshadow..will be problem? */
+    --radius-bottom: var(--radius);
 }
 }
 
