--- a/styles/font-inter.less
+++ b/styles/font-inter.less
@@ -2,8 +2,9 @@
 /*
   NOTE: consider adding this font to the repo?
 */
-// @import url('https://rsms.me/inter/inter.css');
-@import (css) url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://rsms.me/inter/inter.css');
+// NOTE: google font not as good; ex: double quotes look straight
+//@import (css) url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 html, body {
     font-family: 'Inter', sans-serif;
@@ -14,6 +15,6 @@ html, body {
     --theme-body-line-height: 1.4em;
 }
 
-/*@supports (font-variation-settings: normal) {
+@supports (font-variation-settings: normal) {
   html, body { font-family: 'Inter var', sans-serif; }
-}*/
+}
