theme: adjust default --b-tabs-border-color

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -161,7 +161,8 @@
     --b-paper-info-bgd: var(--blue-800);
     --b-paper-info-bgd-accent: var(--blue-400);
 
-    --b-tabs-border-color: rgba(var(--theme-bgd-rgb), .4);
+    // --b-tabs-border-color: rgba(var(--theme-bgd-rgb), .4);
+    --b-tabs-border-color: var(--theme-bgd-accent);
 }
 
 :root[dark] b-panel[type="modal"] {
