pwa.less: remove font-size englarge on tablets

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -66,7 +66,7 @@ html, body {
     Only require one side to be large. Android will shrink the viewport
     when the keyboard opens
 */
-@media 
+/*@media 
 (min-width:600px) and (min-height:400px) and (max-height: 900px),
 (min-width:400px) and (min-height:600px) and (max-width: 900px)
 {
@@ -75,7 +75,7 @@ html, body {
         // little larger on tablets
         font-size: 18px !important;
     }
-}
+}*/
 
 // slightly larger menu on small screens
 @media
