--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -66,16 +66,23 @@ html, body {
     Only require one side to be large. Android will shrink the viewport
     when the keyboard opens
 */
-/*@media 
-(min-width:600px) and (min-height:400px) and (max-height: 900px),
-(min-width:400px) and (min-height:600px) and (max-width: 900px)
+@media 
+(min-width:600px) and (min-height:400px) and (max-height: 900px) and (hover:none),
+(min-width:400px) and (min-height:600px) and (max-width: 900px) and (hover:none)
 {
-    html.touch,
+    /*html.touch,
     html.touch body {
         // little larger on tablets
         font-size: 18px !important;
+    }*/
+
+    // NOTE: should this be the default like this?
+    :root {
+        // font-size: 16px !important;
+        --table-cell-padding: 1rem;
     }
-}*/
+
+}
 
 // slightly larger menu on small screens
 @media
