--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -77,8 +77,12 @@ html, body {
     }*/
 
     // NOTE: should this be the default like this?
-    :root {
-        // font-size: 16px !important;
+    :root.mobile.tablet body {
+        font-size: 18px !important;
+    }
+
+    :root.mobile body {
+        --b-menu-item-padding: .75em;
         --table-cell-padding: 1rem;
     }
 
