pwa: fine tuning

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -134,7 +134,7 @@ b-panel[height="100%"][anchor="left"]::part(main),
     height: calc(100% - (calc(2 * var(--inset-margin, .5em)))) !important;
     right: var(--inset-margin, .5em);
     top: var(--inset-margin, .5em);
-    max-width: calc(100% - (var(--inset-margin, 0.5em) * 2));
+    max-width: calc(100vw - (var(--inset-margin, 0.5em) * 2));
     border-radius: var(--radius);
     overflow: visible; /* keep clipped inside radius; changed for dropshadow..will be problem? */
     --radius-bottom: var(--radius);
